fix: keep beta runtime compatible with older Android APIs