@@ -31,7 +31,7 @@ public final class QuantumNativeMediaPlayer {
     }
 
     public void play(String source, boolean loop) {
-        if (source == null || source.isBlank()) {
+        if (source == null || source.trim().isEmpty()) {
             return;
         }
 
